RESOLVED FIXED157107
[iOS WK2] When determining tile size, check whether ancestor UIScrollViews are actually scrollable
https://bugs.webkit.org/show_bug.cgi?id=157107
Summary [iOS WK2] When determining tile size, check whether ancestor UIScrollViews ar...
Simon Fraser (smfr)
Reported 2016-04-27 16:39:06 PDT
[iOS WK2] When determining tile size, check whether ancestor UIScrollViews are actually scrollable
Attachments
Patch (13.70 KB, patch)
2016-04-27 16:42 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2016-04-27 16:42:43 PDT
Simon Fraser (smfr)
Comment 2 2016-04-27 16:43:08 PDT
WebKit Commit Bot
Comment 3 2016-04-27 16:44:21 PDT
Attachment 277547 [details] did not pass style-queue: ERROR: Source/WebKit2/Shared/VisibleContentRectUpdateInfo.h:60: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 4 2016-04-27 16:44:55 PDT
Comment on attachment 277547 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=277547&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:1956 > ++ (BOOL)scrollViewCanScroll:(UIScrollView *)scrollView why is this not just a static C function?
Simon Fraser (smfr)
Comment 5 2016-04-27 16:51:41 PDT
Chris Dumez
Comment 6 2016-05-03 15:19:36 PDT
Reverted r199259 and r200161 for reason: Seems to have caused a ~1.2% PLT regression on iOS Committed r200390: <http://trac.webkit.org/changeset/200390>
Simon Fraser (smfr)
Comment 7 2016-05-06 18:46:48 PDT
This got re-landed in http://trac.webkit.org/r200470
Note You need to log in before you can comment on or make changes to this bug.