Source/WebKit2/Shared/VisibleContentRectUpdateInfo.cpp
@@ -46,7 +46,7 @@ void VisibleContentRectUpdateInfo::encode(IPC::ArgumentEncoder& encoder) const
     encoder << m_inStableState;
     encoder << m_isChangingObscuredInsetsInteractively;
     encoder << m_allowShrinkToFit;
-    encoder << m_enclosedInScrollView;
+    encoder << m_enclosedInScrollableAncestorView;
 }
 
 bool VisibleContentRectUpdateInfo::decode(IPC::ArgumentDecoder& decoder, VisibleContentRectUpdateInfo& result)
@@ -79,7 +79,7 @@ bool VisibleContentRectUpdateInfo::decode(IPC::ArgumentDecoder& decoder, Visible
         return false;
     if (!decoder.decode(result.m_allowShrinkToFit))
         return false;
-    if (!decoder.decode(result.m_enclosedInScrollView))
+    if (!decoder.decode(result.m_enclosedInScrollableAncestorView))
         return false;
 
     return true;
